# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = trodi
version = 0.0.1
description = Label interferogram pixels or images as outliers
author = scott
author-email = scott.stanie@gmail.com
license = mit
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/scottstanie/trodi/
requires = numpy,netCDF4,xarray
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
# package_dir =
    # =trodi

[options.packages.find]
where = trodi
exclude =
    tests


[options.entry_points]
# Add here console scripts like:
console_scripts =
    trodi = trodi.cli:average_and_label

# [test]
# py.test options when running `python setup.py test`
# addopts = --verbose
# extras = True

[aliases]
dists = bdist_wheel

# [bdist_wheel]
# Use this option if your package is pure-python
# universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[flake8]
# Some sane defaults for the code style checker flake8
max-line-length = 99
extend-ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
